# inferno-rt

./: .gitignore  CHANGELOG_INTERNAL.md  CMakeLists.txt  README.md  build.bat  demo.py  generate_backdated_commits.py
.cache/clangd/index/: activations.cpp.DAC4829242CBC6AE.idx  activations.hpp.CD9549E0431298C0.idx  allocator.cpp.EF406C2F0E0412E1.idx  allocator.hpp.DD64B18D4677E57E.idx  bindings.cpp.AE26E0CD20DB8755.idx  conv2d.cpp.5D1DBC52B60581B7.idx  conv2d.hpp.ED60B95D0769537F.idx  dag.cpp.40BCBD3EEA5284C9.idx  dag.hpp.A4993D67F35655FB.idx  gemm.cpp.E10E5C4AA6A6738B.idx  gemm.hpp.D52204673E5841BF.idx  gemm_benchmark.cpp.84B296392468735E.idx  node.hpp.15B0C4178FBBB132.idx  onnx_parser.cpp.B3F7036AF13C30EE.idx  onnx_parser.hpp.65DD21A634AF5993.idx  ops_nodes.hpp.19866EF755BA0DB6.idx  pooling.cpp.5207C78E8A45BACE.idx  pooling.hpp.865D859F9D76751A.idx  realtime_eval.cpp.7BF21374F80B52AC.idx  tensor.cpp.8DB279B06D8006AC.idx  tensor.hpp.20AB354D9C9C32EE.idx  test_dag_execution.cpp.B27AC6B07A7EEA78.idx  test_gemm_accuracy.cpp.DC9970BEF65FEE7C.idx  test_memory_planner.cpp.64E092FC97165059.idx  test_onnx_parser.cpp.42D163F4951B30A1.idx  test_operator_fusion.cpp.B77511FD09DB3269.idx  test_tensor_strides.cpp.7735001FDCCF9430.idx
benchmarks/: gemm_benchmark.cpp
examples/: realtime_eval.cpp
include/inferno/backends/: cuda_backend.cuh
include/inferno/core/: allocator.hpp  tensor.hpp
include/inferno/graph/: dag.hpp  fused_nodes.hpp  node.hpp  onnx_parser.hpp  ops_nodes.hpp
include/inferno/ops/: activations.hpp  conv2d.hpp  gemm.hpp  pooling.hpp
src/backends/: cuda_backend.cu
src/core/: allocator.cpp  tensor.cpp
src/graph/: dag.cpp  onnx_parser.cpp
src/ops/: activations.cpp  conv2d.cpp  gemm.cpp  pooling.cpp
src/python/: bindings.cpp
tests/: test_dag_execution.cpp  test_gemm_accuracy.cpp  test_memory_planner.cpp  test_onnx_parser.cpp  test_operator_fusion.cpp  test_tensor_strides.cpp
